# qcn

./: COPYRIGHT  LICENSE.md  Makefile.ARM.incl  Makefile.am  Makefile.incl  Makefile.incl.bak  Makefile.incl.mac  README.md  _autosetup  aclocal.m4  apple-defines.txt  backup  boinc_Makefile.am  boinc_configure.ac  config.h  config.h.in  configure.ac.linux  configure.ac.mac  configure.ac.original  configure.ac_android_arm  configure_android_arm  getboinc  getboinc.cmd  libtool  project_specific_defines.h  qcn_config_mac.h  qcn_config_win.h  set-version  vers  version.c  version.h  version.h.in
client/graphics/: Makefile.am  coastline.cpp  coastline.h  country.cpp  country.h  graphics_data.cpp  nation_boundary.cpp  nation_boundary.h  nation_boundary_af.cpp  nation_boundary_as.cpp  nation_boundary_eu.cpp  nation_boundary_na.cpp  nation_boundary_sa.cpp  plate_boundary.cpp  plate_boundary.h  proc_array_file.py  qcn_2dplot.cpp  qcn_2dplot.h  qcn_cube.cpp  qcn_cube.h  qcn_cube_qcnlive.cpp  qcn_earth.cpp  qcn_earth.h  qcn_game_match.cpp  qcn_game_match.h  qcn_graphics.cpp  qcn_graphics.h
client/qcnlive/: Info.plist  Info.plist.mac  QCNLive.pro  QCNLive.pro.bak  QCNLive.rc  QCNLive.vcxproj  QCNLive.vcxproj.filters  build.mac.raw  dlgmakequake.cpp  dlgmakequake.h  dlgsettings.cpp  dlgsettings.h  icons.h  mac-gen-xcode.sh  myframe.cpp  myframe.h  qcnlive.entitlements  qcnlive_define.h  qcnmac.icns  qcnopenglwidget.cpp  qcnopenglwidget.h  qcnqt.cpp  qcnqt.h  resource.h
client/sensor/: csensor.cpp  csensor.h  csensor_android_built_in.cpp  csensor_android_built_in.h  csensor_linux_usb_jw.cpp  csensor_linux_usb_jw.h  csensor_linux_usb_jw24f14.cpp  csensor_linux_usb_jw24f14.h  csensor_linux_usb_onavi.cpp  csensor_linux_usb_onavi.h  csensor_mac_laptop.cpp  csensor_mac_laptop.h  csensor_mac_usb_generic.cpp  csensor_mac_usb_generic.h  csensor_mac_usb_jw.cpp  csensor_mac_usb_jw.h  csensor_mac_usb_jw24f14.cpp  csensor_mac_usb_jw24f14.h  csensor_mac_usb_onavi.cpp  csensor_mac_usb_onavi.h  csensor_usb_motionnodeaccel.cpp  csensor_usb_motionnodeaccel.h  csensor_usb_phidgets.cpp  csensor_usb_phidgets.h  csensor_win_laptop_hp.cpp  csensor_win_laptop_hp.h  csensor_win_laptop_thinkpad.cpp  csensor_win_laptop_thinkpad.h  csensor_win_usb_generic.cpp  csensor_win_usb_generic.h  csensor_win_usb_jw.cpp  csensor_win_usb_jw.h  csensor_win_usb_jw24f14.cpp  csensor_win_usb_jw24f14.h  csensor_win_usb_onavi.cpp  csensor_win_usb_onavi.h  testusb.cpp
client/util/: checkboincstatus.cpp  checkboincstatus.h  cserialize.cpp  cserialize.h  execproc.cpp  execproc.h  gzstream.cpp  gzstream.h  mac_cpu_usage.cpp  make_md5test  md5.cpp  md5.h  md5test.cpp  misc.cpp  qcn_curl.cpp  qcn_curl.h  qcn_gzip.cpp  qcn_gzip.h  qcn_ntpdate.c  qcn_semaphore.cpp  qcn_semaphore.h  qcn_signal.cpp  qcn_signal.h  qcn_thread.cpp  qcn_thread.h  qcn_util.cpp  qcn_util.h  rgb.h  sac.cpp  sac.h  sacio.c  sactosac.c  test-lotsa-zips.cpp  testproc.cpp  time-test.cpp  timetest.c  trickledown.cpp  trickledown.h  trickleup.cpp  trickleup.h  (+3 more)
doc/: LOC.txt  README-server.txt  README.ntp  README.txt  Scope of Work.doc  Summary_Triggering.doc  boundary.kmz  c152.c  doxy-client  earth_web.html  hp-mobile.txt  ibm_thinkpad_sensor.txt  linux-support.txt  logo.tif  logo2.xcf  motionnode.sftp  onavi_prog.txt  plug_armv5.txt  qcn_server.txt  qcnicon.xpm  raspberry_pi.txt  recaptcha.csv  sac2png.tgz  sac_license.txt  sac_readme.html  scedc-netpoly.kml  seismac.tiff  splash.xcf  triangulation.doc  windows_7_sensors.txt  wordpress_users.sql  xyz.ai
freetype-2.6/: build.mac
installer/: README.txt  disclaimer.txt  qcndemo.pmproj  welcome.txt
m4/: Makefile.in
server/autotrigger/: README.txt  autotrigger.py  procupload.py
server/misc-upl/: README.txt  archive-data-private.sh  archive-data-private.sql  delfiles.py  elev.py  fanout.py  fixcont.py  fixdir.py  list.py  movefiles.py  qcnutil.py  replay-trigger  trigfile.py  trigger_archive.py  (+3 more)
(+117 files in other folders)
